[package]
name = "c-webassembly"
version = "0.1.0"
authors = ["Apisit Ritreungroj <apisit_lon@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE"
categories = ["compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
structopt = "0.3.23"
owo-colors = "2.1.0"
quote = "1.0.10"
syn = "1.0.78"
regex = { version = "1.5.4", features = ["std"] }

[dev-dependencies]
assert_cmd = "2.0.1"

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
codegen-units = 1

[[test]]
path = "tests/default.rs"
name = "default"